<resources>
    <string name="app_name">Family Messaging App</string>
    <string name="hint_email">Emailinizi giriniz</string>
    <string name="hint_password">Şifrenizi giriniz</string>
    <string name="button_login">Giriş</string>
    <string name="button_google">Google ile Giriş</string>
    <string name="button_register">Kayıt Olmak İster misiniz ?</string>
    <string name="forgot_password">Şifremi Unuttum ?</string>
    <string name="button_telephone">Telefon</string>
    <string name="admin_redirect">Admin Sayfasına Yönlendiliyorsunuz</string>
    <string name="telephone_login_redirect">Telephone Validation Sayfasına Yönlendiliyorsunuz</string>
    <string name="login_faile">Sisteme giriş yaparken hata meydana geldi İnternetiniz veya kulanıcı yoktur</string>
    <string name="register">Register Sayfası</string>
    <string name="email">Email</string>

    <!--vki-->
    <string name="sonuc">Sonuç</string>
    <string name="boy">Boyunuz (Cm)</string>
    <string name="kilo">Kilo (Kg)</string>
    <string name="cinsiyet">Cinsiyet</string>
    <string name="bay">Bay</string>
    <string name="bayan">Bayan</string>
    <string name="zayif">Zayıfsınız</string>
    <string name="normal">Kilolunuz Normal</string>
    <string name="normal_arti">Kiloluk Biraz fazla</string>
    <string name="Kilolu">Kilonuz normalden fazla</string>
    <string name="fazla">Kilolunuz Fazla Dikkat</string>
    <string name="obez">Obezsiniz</string>
    <string name="dikkat">Hastane görünmenizde fayda var.</string>
    <string name="ideal">ideal kilonuz</string>


</resources>

