<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:useDefaultMargins="true"
    android:columnCount="2"
    android:background="#123456"
    android:padding="@dimen/padding_large"
    tools:context=".VkiActivity">

    <!--toolbar eklemek-->
   <!-- <include
        android:id="@+id/vkiToolBarId"
        layout="@layout/my_toolbar"
         />-->

    <!--1.SATIR-->
    <TextView
        android:id="@+id/textViewVkiKiloId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/kilo"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical|left"/>

    <SeekBar
        android:id="@+id/seekBarVkiId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:progress="25"/>

    <!--2.SATIR-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/boy"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical|left"/>


    <EditText
        android:id="@+id/editTextVki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:maxLength="3"
        android:inputType="number"
        android:digits="0123456789">
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/textViewVkiBoyId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:textColor="@color/white"
        android:background="@color/black"/>


    <!--3.SATIR-->
    <TextView
        android:id="@+id/textVkiKiloId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/boy"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical|left"/>


    <!--4.SATIR-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/cinsiyet"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical|left"/>

    <RadioGroup
        android:id="@+id/radioGroupVkiId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/bayan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bayan"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/bay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bay" />
    </RadioGroup>


    <!--5.SATIR-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center_vertical|left"
        android:text="@string/ideal"
        android:textColor="@color/white"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/textVkiIdealId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:text=""
        android:textColor="@color/white"
        android:layout_gravity="fill_horizontal"/>

    <!--6.SATIR-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="center_vertical|left"
        android:text="@string/sonuc"
        android:textColor="@color/white"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/textVkiDurumId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:textColor="@color/white"
        android:layout_gravity="fill_horizontal"
        android:padding="8dp"/>
    <Space/>
</GridLayout>