<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="18dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:background="@drawable/background"
    tools:context=".MainActivity">

   <!-- layout_centerInParent: tam ortalamak-->
    <ScrollView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <!--main LinearLayout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/circle_profile"
                android:layout_marginBottom="10dp"
                android:id="@+id/pictureMainId"/>

            <!--email adress-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:textColor="#000000"
                    android:hint="@string/hint_email"
                    android:drawableLeft="@drawable/email"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/editTextLoginMailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:textColor="#000000"
                    android:drawableLeft="@drawable/password"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:id="@+id/editTextLoginPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--button-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/login"
                    android:text="@string/button_login"
                    android:layout_marginRight="5dp"
                    android:id="@+id/buttonLogin" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:drawableLeft="@drawable/register"
                    android:text="@string/button_register"
                    android:id="@+id/buttonLoginRegister" />
            </LinearLayout>  <!--end button-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--google sigIn-->
            <com.google.android.gms.common.SignInButton
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/buttonGoogleIndent"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/telephone"
                android:text="@string/button_telephone"
                android:layout_marginRight="5dp"
                android:id="@+id/buttonTelephone"
                />
        </LinearLayout>
        </LinearLayout> <!--end linearLayout-->
    </ScrollView><!--end main ScrollView-->
</RelativeLayout><!--end main RelativeLayout-->